# chatGPT-discord-bot-nixos-flake

./: flake.nix  pyproject.toml
