[tool.poetry]
name = "chatgpt-discord-bot"
version = "0.1.0"
description = ""
authors = ["skarlett <skarlett@github.com>"]
readme = "README.md"
packages = [{include = "chatgpt_discord_bot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
